--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -1,31 +1,34 @@
 pre, code {
-	font: 13px/19px "Source Code Pro", "Anonymous Pro", Monaco, monospace;
+	font: 13px/19px Cousine, "Source Code Pro", "Anonymous Pro", Monaco, monospace;
 }
 	pre {
-		background: #f3f5f7;
-		color: #7b8391;
+		background: #fff;
+		color: #86827d;
 		
-		font: 13px/19px "Source Code Pro", "Anonymous Pro", Monaco, monospace;
-		line-height: 19px;
+		font: 13px/24px Cousine, "Source Code Pro", "Anonymous Pro", Monaco, monospace;
 		word-wrap: break-word;
 		
 		border-radius: 5px;
-		padding: 15px 25px;
+		padding: 20px 25px;
 	}
 
 pre .comment {
-	color: #b2b9c5;
+	color: #cfcdc9;
 }
 
 pre .function, pre .variable {
-	color: #4f97da;
+	color: #d85e34;
 }
 
 pre .support, pre .keyword {
-	color: #d46041;
+	color: #8cb833;
+}
+
+pre .call {
+	color: #4cabe5;
 }
 
 .string {
-    color: #576a8d;
-    background: rgba(179,197,233,.05);
+    color: #a69061;
+    background: #fffdf2;
 }
