--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -71,11 +71,11 @@ a {
 		opacity: .5;
 	}
 
-a.chevron {
+a.chevron, h1 + p em a {
 	display: inline-block;
 	position: relative;
 }
-	a.chevron:after {
+	a.chevron:after, h1 + p em a:after {
 		content: '\203A';
 		position: relative;
 		top: -2px;
@@ -85,9 +85,9 @@ a.chevron {
 		opacity: 0;
 		transition: opacity .2s, margin .2s;
 	}
-		a.chevron:hover:after {
+		a.chevron:hover:after, h1 + p em a:hover:after {
 			opacity: 1;
-			margin-left: 10px;
+			margin-left: .3em;
 		}
 	
 a, span, a:before {
@@ -150,7 +150,7 @@ a, span, a:before {
 	margin-right: 3px;
 }
 
-h1, h2, h3, h4, dt, blockquote, .sidebar li.active a:before {
+h1, h2, h3, h4, dt, blockquote, .sidebar li.active a:before, .main h1 + p {
 	font: 40px/48px Alegreya, Georgia, Garamond, serif;
 }
 	h1 {
@@ -159,6 +159,12 @@ h1, h2, h3, h4, dt, blockquote, .sidebar li.active a:before {
 
 		color: #4e4a45;
 	}
+		.main h1 {
+			padding-bottom: 30px;
+
+			font-size: 40px;
+			line-height: 54px;
+		}
 	h2 {
 		font-size: 40px;
 		line-height: 50px;
@@ -498,8 +504,11 @@ h1, h2, h3, h4, dt, blockquote, .sidebar li.active a:before {
 		.feature-list p + p {
 			padding-top: 15px;
 		}
+	.feature-list .sprite {
+		margin-bottom: 15px;
+	}
 	.feature-list h1 {
-		padding: .5em 0 .75em;
+		padding: 0 0 .75em;
 
 		font-size: 24px;
 		line-height: 32px;
@@ -507,7 +516,7 @@ h1, h2, h3, h4, dt, blockquote, .sidebar li.active a:before {
 
 .cycle {
 	position: relative;
-	margin-bottom: 70px !important;
+	margin-bottom: 50px !important;
 }
 	.cycle:after {
 		opacity: 0;
@@ -614,11 +623,6 @@ h1, h2, h3, h4, dt, blockquote, .sidebar li.active a:before {
 				cursor: default;
 			}
 
-.main {
-	float: right;
-	width: 770px;
-}
-
 /**
  *   Home page animation
  */
@@ -661,6 +665,70 @@ h1, h2, h3, h4, dt, blockquote, .sidebar li.active a:before {
 	}
 }
 
+.main {
+	float: right;
+	width: 770px;
+}
+	.main p {
+		padding-bottom: 16px;
+
+		font-size: 16px;
+		line-height: 26px;
+	}
+		.main h1 + p {
+			padding-bottom: 22px;
+
+			font-size: 20px;
+			line-height: 32px;
+		}
+	.main ul, .main ol {
+		margin: 10px 20px 25px;
+	}
+		.main ul li {
+			list-style: none;
+		}
+		.main ul li:before {
+			content: '';
+			position: relative;
+			top: -2px;
+
+			display: inline-block;
+			width: 4px;
+			height: 4px;
+			margin-right: 20px;
+
+			background: #bab6b1;
+
+			border-radius: 6px;
+		}
+	.main pre {
+		margin: 20px 0 40px -5px;
+
+		border-left: 5px solid #eeece9;
+		border-radius: 0 5px 5px 0;
+	}
+	.main h2 {
+		margin: 25px 0 15px;
+	}
+
+.info, .main .info {
+	display: block;
+	padding: 22px 30px 22px 70px;
+	margin: 15px 0 5px;
+	
+	background: #36a4e3 url('../img/info.png') no-repeat 25px 25px;
+	background-size: 26px 26px;
+
+	font-size: 15px;
+	line-height: 24px;
+	color: #caecff;
+
+	border-radius: 6px;
+}
+	.info b {
+		display: block;
+		color: #fff;
+	}
 
 
 /**
